@@ -70,6 +70,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CadLisp                Roberto Rossi
 - CDFG                   John Horigan
 - CIL                    Marcus Griep
+- CMake                  Daniel Nelson
 - COBOL                  Benny Baumann
 - ColdFusion             Diego
 - D                      Thomas Kuehne
