@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.4
   -  Added language files
+     * CMake (Daniel Nelson)
      * FO (abas-ERP) (Tan-Vinh Nguyen)
      * Property Files (Edy Hinzen)
      * Whois (RPSL format) entries (Benny Baumann)
